--- a/_includes/sc/who.html
+++ b/_includes/sc/who.html
@@ -1,6 +1,6 @@
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  This workshop is for analysts, evaluators, and epidemiologists at the King County Department of Community and Human Services and Public Health - Seattle and King County
   <strong>
     You don't need to have any previous knowledge of the tools
     that will be presented at the workshop.
