--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -1,3 +1,4 @@
+<!--
 <div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-shell">The Unix Shell</h3>
@@ -24,7 +25,6 @@
       <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
     </ul>
   </div>
-  <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Programming in R</h3>
     <ul>
@@ -36,8 +36,6 @@
       <li><a href="{{site.swc_pages}}/r-novice-inflammation/reference">Reference...</a></li>
     </ul>
   </div>
-  -->
-  <!--
   <div class="col-md-6">
     <h3 id="syllabus-matlab">Programming in MATLAB</h3>
     <ul>
@@ -49,35 +47,52 @@
       <li><a href="{{site.swc_pages}}/matlab-novice-inflammation/reference">Reference...</a></li>
      </ul>
    </div>
-   -->
 </div>
-
+-->
 <div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-git">Version Control with Git</h3>
     <ul>
+      <li>Setting up git</li>
       <li>Creating a repository</li>
       <li>Recording changes to files: <code>add</code>, <code>commit</code>, ...</li>
       <li>Viewing changes: <code>status</code>, <code>diff</code>, ...</li>
       <li>Ignoring files</li>
       <li>Working on the web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
       <li>Resolving conflicts</li>
+      <!--
       <li>Open licenses</li>
       <li>Where to host work, and why</li>
+      -->
       <li><a href="{{site.swc_pages}}/git-novice/reference">Reference...</a></li>
+    </ul>
+  </div>
+  <div class="col-md-6">
+    <h3 id="syllabus-rr">R for Reproducible Scientific Analysis</h3>
+    <ul>
+      <li>Introduction to R and RStudio</li>
+      <li>Data structures</li>
+      <li>Exploring data frames</li>
+      <li>Writing data</li>
+      <li>Dataframe manipulation with dplyr</li>
+      <li>Dataframe manipulation with tidyr</li>
+      <li>Control flow</li>
+      <li>Vectorization</li>
+      <li>Functions explained</li>
+      <li><a href="{{site.swc_pages}}/r-novice-gapminder/reference.html">Reference...</a></li>
     </ul>
   </div>
   <div class="col-md-6">
     <h3 id="syllabus-sql">Managing Data with SQL</h3>
     <ul>
-      <li>Reading and sorting data</li>
-      <li>Filtering with <code>where</code></li>
-      <li>Calculating new values on the fly</li>
-      <li>Handling missing values</li>
-      <li>Combining values using aggregation</li>
-      <li>Combining information from multiple tables using <code>join</code></li>
-      <li>Creating, modifying, and deleting data</li>
-      <li>Programming with databases</li>
+      <li>Selecting data</li>
+      <li>Sorting and removing duplicates</li>
+      <li>Filtering</li>
+      <li>Calculating new values</li>
+      <li>Missing data</li>
+      <li>Aggregation</li>
+      <li>Combining data</li>
+      <li>Data hygiene</li>
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference">Reference...</a></li>
     </ul>
   </div>
