--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -14,7 +14,7 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>09:00</td>  <td>R for Reproducible Analysis (cont'd)</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
